# multi-agent-env

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  demo.py  execution.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py
agents/: __init__.py  full_state_observation_builder.py  observation_builder.py  specialist_report.py
agents/commander/: __init__.py  action_parser.py  commander.py  single_agent_commander.py  single_agent_system_prompt.txt  system_prompt.txt
agents/specialists/: __init__.py  base_specialist.py  infra_specialist.py  log_specialist.py  sec_specialist.py
blog/: hf_blog_post.md
environments/: __init__.py
environments/infra_env/: Dockerfile  __init__.py  env.py  extractor.py  openenv.yaml  server.py  state.py
environments/log_env/: Dockerfile  __init__.py  env.py  extractor.py  openenv.yaml  server.py  state.py
environments/pomir_env/: Dockerfile  __init__.py  env.py  episode_runner.py  (+3 more)
eval/: __init__.py  compare_conditions.py  condition_runner.py  episode_replay.py  hint_effect.py  metrics.py  trust_probe.py
rewards/: __init__.py  composite.py  coordination.py  efficiency.py  resolution.py  root_cause.py  trust_calibration.py
runtime/: __init__.py  env.py  terminal.py
server/: __init__.py  app.py
tests/: test_episode_flow.py  test_extractors.py  test_inference_parser.py  test_openenv_compliance.py  test_rewards.py  test_server.py  test_state_partitioning.py  test_training_artifacts.py
training/: __init__.py  dataset_builder.py  grpo_train.py  hint_builder.py  spectra_training_colab.ipynb
(+20 files in other folders)
