[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectra-openenv"
version = "0.1.0"
description = "SPECTRA: Specialist Partial Environment Coordination for Training Resilient Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "huggingface_hub>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "datasets>=4.0.0",
]

[project.optional-dependencies]
train = [
    "trl>=0.19.0",
    "transformers>=4.49.0",
    "accelerate>=1.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
spectra-server = "server.app:main"
spectra-demo = "run_demo:main"
spectra-train = "training.grpo_train:main"

[tool.hatch.build.targets.wheel]
packages = ["environments", "agents", "rewards", "training", "runtime", "eval", "server"]
